[gd_scene format=4 uid="uid://i4budr6yn1pb"]

[ext_resource type="Script" uid="uid://do6oebix1rkbi" path="res://Scenes/main_menu.gd" id="1_jjgbg"]
[ext_resource type="Texture2D" uid="uid://cg6ktv223su6i" path="res://Assets/Images/KIRKKI.png" id="2_bo1nx"]
[ext_resource type="Texture2D" uid="uid://cuuabtso1mi73" path="res://Assets/Images/KIVInapis.png" id="2_kry3j"]
[ext_resource type="Texture2D" uid="uid://b574wq5buqxya" path="res://Assets/Images/Tilemap/Forest/Jos_nyt_ne_mullat....png" id="3_8gbba"]
[ext_resource type="FontFile" uid="uid://dblnmp8i2xalr" path="res://Assets/Tiny5-Regular.ttf" id="3_21xkr"]
[ext_resource type="Texture2D" uid="uid://djn8jysp2kray" path="res://Assets/Images/Tilemap/Forest/Keskikohat_uus_emt.png" id="3_jjvhh"]
[ext_resource type="PackedScene" uid="uid://bykxo2lthnfm6" path="res://Scenes/player.tscn" id="7_6bp64"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jjvhh"]
texture = ExtResource("3_8gbba")
1:0/0 = 0
3:0/0 = 0
1:1/0 = 0
3:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kry3j"]
texture = ExtResource("3_jjvhh")
1:1/0 = 0
4:1/0 = 0
1:4/0 = 0
4:4/0 = 0
1:7/0 = 0
4:7/0 = 0

[sub_resource type="TileSet" id="TileSet_kry3j"]
sources/0 = SubResource("TileSetAtlasSource_jjvhh")
sources/1 = SubResource("TileSetAtlasSource_kry3j")

[sub_resource type="AtlasTexture" id="AtlasTexture_21xkr"]
atlas = ExtResource("2_kry3j")
region = Rect2(0, 0, 32, 16)

[node name="Main menu" type="Control" unique_id=188194463]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jjgbg")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1247527734]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 529.5
offset_top = 10.5
offset_right = 590.5
offset_bottom = 181.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.225, 3.225)
size_flags_horizontal = 4

[node name="Start Game2" type="Button" parent="VBoxContainer" unique_id=926832148]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Winter"

[node name="Start Game3" type="Button" parent="VBoxContainer" unique_id=425696323]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Cavern"

[node name="Start Game4" type="Button" parent="VBoxContainer" unique_id=1851989774]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Desert"

[node name="Start Game5" type="Button" parent="VBoxContainer" unique_id=1993211801]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Heaven"

[node name="Node2D" type="Node2D" parent="." unique_id=2053757881]
scale = Vector2(4, 4)

[node name="TileMapLayer" type="TileMapLayer" parent="Node2D" unique_id=260159556]
tile_map_data = PackedByteArray("AAAAAAkAAAABAAEAAAABAAkAAAABAAAAAAACAAkAAAABAAEAAAADAAkAAAABAAEAAAAEAAkAAAADAAAAAAAFAAkAAAADAAAAAAAGAAkAAAABAAEAAAAHAAkAAAABAAEAAAAIAAkAAAADAAEAAAAJAAkAAAABAAAAAAAKAAkAAAABAAEAAAALAAkAAAABAAAAAAAMAAkAAAADAAAAAAANAAkAAAABAAEAAAAOAAkAAAADAAEAAAAPAAkAAAADAAAAAAAQAAkAAAABAAEAAAARAAkAAAADAAAAAAASAAkAAAABAAEAAAATAAkAAAABAAEAAAAAAAoAAQAEAAEAAAABAAoAAQAEAAEAAAACAAoAAQAEAAEAAAADAAoAAQAEAAEAAAAEAAoAAQAEAAQAAAAFAAoAAQAEAAEAAAAGAAoAAQAEAAEAAAAHAAoAAQAEAAEAAAAIAAoAAQAEAAEAAAAJAAoAAQAEAAEAAAAKAAoAAQAEAAEAAAALAAoAAQAEAAEAAAAMAAoAAQAEAAEAAAANAAoAAQAEAAEAAAAOAAoAAQAEAAEAAAAPAAoAAQAEAAEAAAAQAAoAAQAEAAEAAAARAAoAAQABAAQAAAASAAoAAQAEAAEAAAATAAoAAQAEAAEAAAATAAsAAQAEAAEAAAASAAsAAQAEAAEAAAARAAsAAQAEAAEAAAAQAAsAAQAEAAEAAAAPAAsAAQAEAAEAAAAOAAsAAQAEAAEAAAANAAsAAQAEAAEAAAAMAAsAAQAEAAEAAAAJAAsAAQAEAAEAAAAIAAsAAQAEAAEAAAAHAAsAAQAEAAEAAAAGAAsAAQAEAAEAAAAFAAsAAQAEAAEAAAAEAAsAAQAEAAEAAAADAAsAAQAEAAEAAAACAAsAAQAEAAEAAAABAAsAAQAEAAEAAAAAAAsAAQABAAQAAAAKAAsAAQAEAAQAAAALAAsAAQABAAQAAAA=")
tile_set = SubResource("TileSet_kry3j")

[node name="Kirkki" type="Sprite2D" parent="Node2D" unique_id=1444056179]
position = Vector2(289.5, 99.74999)
scale = Vector2(0.7402344, 0.69921875)
texture = ExtResource("2_bo1nx")

[node name="Start Game" type="Button" parent="." unique_id=855084759]
layout_mode = 0
offset_left = 147.0
offset_top = 305.0
offset_right = 187.0
offset_bottom = 329.0
scale = Vector2(7.715, 5)
size_flags_horizontal = 8
size_flags_vertical = 8
icon = SubResource("AtlasTexture_21xkr")
flat = true
autowrap_trim_flags = 0
clip_text = true
icon_alignment = 1

[node name="Label" type="Label" parent="Start Game" unique_id=1405628955]
visible = false
layout_mode = 0
offset_left = 3.7297468
offset_top = 5.1000004
offset_right = 37.597584
offset_bottom = 21.013977
scale = Vector2(0.93, 0.93)
theme_override_fonts/font = ExtResource("3_21xkr")
theme_override_font_sizes/font_size = 10
text = "Forest"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player" parent="." unique_id=1799530315 instance=ExtResource("7_6bp64")]
visible = false
position = Vector2(938, 557)

[connection signal="pressed" from="VBoxContainer/Start Game2" to="." method="_on_start_game_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Start Game2" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Start Game3" to="." method="_on_start_game_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Start Game3" to="." method="_on_start_game_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Start Game3" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Start Game4" to="." method="_on_start_game_4_pressed"]
[connection signal="pressed" from="VBoxContainer/Start Game4" to="." method="_on_start_game_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Start Game4" to="." method="_on_start_game_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Start Game4" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Start Game5" to="." method="_on_start_game_5_pressed"]
[connection signal="pressed" from="VBoxContainer/Start Game5" to="." method="_on_start_game_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Start Game5" to="." method="_on_start_game_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Start Game5" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Start Game" to="." method="_on_start_game_pressed"]
